--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>HTML Template [Change this title]</title>
+    <title>HTML-CSS-layout</title>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
-    <div class="container">
-        <header></header>
-        <nav></nav>
-        <main></main>
-        <footer></footer>
+    <nav>
+        <a id=link1 href="#rashad" title="Go to Page 1"> Link 1</a>
+        <a href="#rashad" title="Go to Page 1"> Link 2 </a>
+        <a href="#rashad" title="Go to Page 1"> Link 3 </a>
+    </nav>
+
+    <div id="rashad" class="container">
+        <header>
+            <h1>Rashad Sharaf</h1>
+
+            <h2>shar0489</h2>
+
+        </header>
+        <main>
+            <h1>
+                This is a 3rem SubHeading
+            </h1>
+
+            <p>Body text at 1rem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, laudantium reprehenderit aperiam accusamus beatae adipisci? Cupiditate eligendi sit ipsam, sint provident atque sunt nihil, tempore odit culpa aliquam nisi temporibus.</p>
+            
+            <p>Est quibusdam eveniet atque deleniti reiciendis, laborum error accusantium minus cumque, possimus dolor, placeat quia consectetur! Debitis praesentium esse dolorem assumenda voluptates sequi veritatis amet quis, nam autem eos dignissimos.</p>
+            
+            <p>Facere officiis deleniti reiciendis corrupti qui assumenda, neque asperiores, voluptates libero nam quisquam ipsum. Natus deleniti nisi, labore, officiis ab voluptatibus error recusandae similique fuga quasi officia inventore vel provident.</p>
+
+            <h2>
+                This is a 1.5rem SubHeading
+            </h2>
+            <ul>
+                <li>Item Number 1 (1rem)</li>
+                <li>Item Number 2 (1rem)</li>
+                <li>Item Number 3 (1rem)</li>
+                <li>Item Number 4 (1rem)</li>
+                <li>Item Number 5 (1rem)</li>
+            </ul>
+        </main>
     </div>
 </body>
+
 </html>
